force-app/main/default/objects/ARF_Promise_To_Pay__c/ARF_Promise_To_Pay__c.object-meta.xml
<CustomObject>
    <description>Customer payment promises with tracking</description>
    <label>Promise to Pay</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>Promise to Pay Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promises to Pay</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>