force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account that made the promise</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promises_To_Pay</relationshipLabel>
    <relationshipName>Promises_To_Pay</relationshipName>
    <type>Lookup</type>
</CustomField>