force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount customer promised to pay</description>
    <label>Promised Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>