force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Broken_Count__c.field-meta.xml
<CustomField>
    <fullName>Broken_Count__c</fullName>
    <description>How many times this customer has broken promises</description>
    <label>Times Broken</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>