force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Created_By_Communication__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Communication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Communication that created this promise</description>
    <label>Source Communication</label>
    <referenceTo>ARF_Communication__c</referenceTo>
    <relationshipLabel>Related_Promises</relationshipLabel>
    <relationshipName>Related_Promises</relationshipName>
    <type>Lookup</type>
</CustomField>