force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Installment_Count__c.field-meta.xml
<CustomField>
    <fullName>Installment_Count__c</fullName>
    <description>Number of installments if payment plan</description>
    <label>Installment Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>