force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specific invoice promised for (optional)</description>
    <label>Invoice</label>
    <referenceTo>ARF_Invoice__c</referenceTo>
    <relationshipLabel>Promises_To_Pay</relationshipLabel>
    <relationshipName>Promises_To_Pay</relationshipName>
    <type>Lookup</type>
</CustomField>