force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes about the promise</description>
    <label>Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>