force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Promise_Date__c.field-meta.xml
<CustomField>
    <fullName>Promise_Date__c</fullName>
    <description>Date customer promised to pay by</description>
    <label>Promise Date</label>
    <type>Date</type>
</CustomField>