force-app/main/default/objects/ARF_Promise_To_Pay__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current promise status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value><fullName>Open</fullName><default>false</default><label>Open</label></value>
                <value><fullName>Kept</fullName><default>false</default><label>Kept</label></value>
                <value><fullName>Broken</fullName><default>false</default><label>Broken</label></value>
                <value><fullName>Partially Kept</fullName><default>false</default><label>Partially Kept</label></value>
                <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>